--- a/Runtime/Silksprite/PSMerger/CSExEx/Silksprite.PSMerger.CSExEx.asmdef
+++ b/Runtime/Silksprite/PSMerger/CSExEx/Silksprite.PSMerger.CSExEx.asmdef
@@ -3,8 +3,7 @@
     "rootNamespace": "",
     "references": [
         "Baxter.ClusterScriptExtensions",
-        "Silksprite.PSMerger",
-        "Silksprite.PSMerger.Compiler"
+        "Silksprite.PSMerger"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
