--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "net.kaikoga.psmerger.csexex",
-  "url": "https://vpm.kaikoga.net/millenium/net.kaikoga.psmerger/net.kaikoga.psmerger.csexex-3.0.0.zip",
+  "url": "https://vpm.kaikoga.net/millenium/net.kaikoga.psmerger/net.kaikoga.psmerger.csexex-4.0.0.zip",
   "displayName": "PSMerger CSExEx",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "unity": "2021.3",
   "description": "Merge PlayerScript",
   "dependencies": {
-    "mu.cluster.cluster-creator-kit": "2.0.0",
-    "net.kaikoga.psmerger": "3.0.0"
+    "mu.cluster.cluster-creator-kit": "2.0.0"
+  },
+  "vpmDependencies": {
+    "net.kaikoga.psmerger": ">=4.0.0 <5.0.0"
   },
   "author": {
     "name": "kaikoga",
